Fixed hover covering product name and playing with index call to action button

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@
 
 /* ---------------- GLOBAL ---------------- */
 
+:root {
+	--gradient: linear-gradient(0deg, #55d9e9, rgb(86, 73, 252));
+	--accent-color: rgb(86, 73, 252);
+}
+
 body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
@@ -63,9 +68,12 @@ h1 {
 }
 
 p {
+	position: relative;
 	font-size: calc(14px + .2vw);
 	letter-spacing: .2px;
 	margin-top: 10px;
+	z-index: 100;
+	/* z-index here is so product hover tranform doesn't cover product name on hover */
 }
 
 .sub-heading {
@@ -87,7 +95,7 @@ p {
 }
 
 a:hover {
-	color: rgb(86, 73, 252);
+	color: var(--accent-color);
 }
 
 .dropdown:hover {
@@ -178,7 +186,7 @@ li {
 }
 
 .subnav > ul > li:hover {
-	color: rgb(86, 73, 252);
+	color: var(--accent-color);
 }
 
 .dropdown {
@@ -203,7 +211,7 @@ li {
 
 
 .gradient-bg {
-	background-image: linear-gradient(0deg, #55d9e9, rgb(86, 73, 252));
+	background-image: var(--gradient);
 	width: 100vw;
 	height: 100vh;
 }
@@ -232,6 +240,23 @@ li {
 	font-size: calc(16px + 9vh);
 	line-height: 95%;
 	height: 100%;
+}
+
+.link-btn {
+	position: relative;
+	background: var(--accent-color);
+	color: #fff;
+	padding: 15px 20px;
+	border-radius: 5px;
+	box-shadow: 10px 10px 30px -10px rgb(34 34 34 / 70%);
+	cursor: pointer;
+	transition: transform 100ms linear;
+	z-index: 3;
+}
+
+.link-btn:hover {
+	transform: scale(.98);
+	color: #fff;
 }
 
 .album-img {
@@ -605,6 +630,7 @@ footer {
 
 	.album-mobile {
 		position: relative;
+		/*top: 70px;*/
 		display: flex;
 		width: 100%;
 		height: auto;
